--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,31 @@
-# compiled output
-/dist
-/node_modules
-/build
+# ===============================================
+# NODE.JS / NPM / PNPM
+# ===============================================
 
-# Logs
+# Dependencies - Ignore all node_modules directories
+node_modules/
+**/node_modules/
+apps/backend/node_modules/
+apps/frontend/node_modules/
+packages/*/node_modules/
+
+# Package manager lock files (keep pnpm-lock.yaml, ignore others)
+package-lock.json
+yarn.lock
+.pnpm-store/
+
+# Compiled output
+dist/
+**/dist/
+apps/backend/dist/
+apps/frontend/.next/
+apps/frontend/out/
+build/
+.build/
+
+# ===============================================
+# LOGS
+# ===============================================
 logs
 *.log
 npm-debug.log*
@@ -12,49 +34,134 @@ yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
 
-# OS
+# ===============================================
+# ENVIRONMENT & CONFIG
+# ===============================================
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.env.*.local
+
+# ===============================================
+# TESTING & COVERAGE
+# ===============================================
+coverage/
+**/coverage/
+.nyc_output/
+junit.xml
+test-results/
+
+# ===============================================
+# CACHE & TEMPORARY FILES
+# ===============================================
+.cache/
+.parcel-cache/
+.next/
+.nuxt/
+.vuepress/dist
+.temp/
+.tmp/
+*.tmp
+*.temp
+
+# ===============================================
+# OPERATING SYSTEM
+# ===============================================
+
+# macOS
 .DS_Store
+.DS_Store?
+.AppleDouble
+.LSOverride
+Icon?
 
-# Tests
-/coverage
-/.nyc_output
+# Windows
+Thumbs.db
+Thumbs.db:encryptable
+ehthumbs.db
+ehthumbs_vista.db
+*.stackdump
+Desktop.ini
 
-# IDEs and editors
-/.idea
+# Linux
+*~
+
+# ===============================================
+# EDITORS & IDEs
+# ===============================================
+
+# VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
+
+# JetBrains IDEs
+.idea/
+*.iws
+*.iml
+*.ipr
+
+# Other IDEs
 .project
 .classpath
 .c9/
 *.launch
 .settings/
 *.sublime-workspace
+*.sublime-project
 
-# IDE - VSCode
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
-
-# dotenv environment variable files
-.env
-.env.development.local
-.env.test.local
-.env.production.local
-.env.local
-
-# temp directory
-.temp
-.tmp
-
-# Runtime data
+# ===============================================
+# RUNTIME & PROCESS
+# ===============================================
 pids
 *.pid
 *.seed
 *.pid.lock
 
-# Diagnostic reports (https://nodejs.org/api/report.html)
+# Runtime data
+lib-cov
+lcov.info
+
+# Diagnostic reports
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
-#pnpm
-.pnpm*
+# ===============================================
+# DOCKER
+# ===============================================
+.dockerignore
+Dockerfile.prod
+
+# ===============================================
+# MONOREPO SPECIFIC
+# ===============================================
+
+# Lerna
+lerna-debug.log*
+
+# Rush
+common/deploy/
+common/temp/
+common/autoinstallers/*/.npmrc
+**/.rush/temp/
+
+# ===============================================
+# FRONTEND SPECIFIC (Next.js, React)
+# ===============================================
+apps/frontend/.next/
+apps/frontend/out/
+apps/frontend/build/
+apps/frontend/dist/
+
+# ===============================================
+# BACKEND SPECIFIC (NestJS)
+# ===============================================
+apps/backend/dist/
+apps/backend/coverage/
     
