--- a/apps/frontend/Dockerfile.dev
+++ b/apps/frontend/Dockerfile.dev
@@ -13,7 +13,13 @@ COPY package.json pnpm-lock.yaml pnpm-workspace.yaml ./
 COPY apps/frontend/package.json ./apps/frontend/
 
 # Install all dependencies (this installs for the entire workspace)
-RUN pnpm install
+RUN pnpm install --frozen-lockfile
+
+# Copy the entire source code AFTER installing dependencies
+COPY . .
+
+# Set working directory to frontend
+WORKDIR /app/apps/frontend
 
 # Expose port
 EXPOSE 3000
